Add: Ads section in progress

--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -1,3 +1,5 @@
+@use "variables" as v;
+
 html {
     font-size: 62.5%;
     box-sizing: border-box;
@@ -6,15 +8,15 @@ html {
     box-sizing: inherit;
 }
 body {
-    font-family: $fuente_principal;
+    font-family: v.$main_font;
     font-size: 1.6rem;
     line-height: 1.8;
 }
 p {
-    color: $negro;
+    color: v.$black;
     font-size: 2rem;
 }
-.contenedor {
+.container {
     width: 95%;
     max-width: 120rem;
     margin: 0 auto;
@@ -31,8 +33,8 @@ picture {
 }
 
 h1, h2, h3 {
-    font-family: $fuente_principal;
-    margin: calc($separacion / 2) 0;
+    font-family: v.$main_font;
+    margin: calc(v.$gap / 2) 0;
     font-weight: 300;
     text-align: center;
     
