--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -1,23 +1,37 @@
-/** Media Queries **/
+@use "variables" as v;
+
 @mixin telefono {
-    @media (min-width: #{$telefono}) {
+    @media (min-width: #{v.$mobile}) {
         @content;
     }
 }
 
 @mixin tablet {
-    @media (min-width: #{$tablet}) {
+    @media (min-width: #{v.$tablet}) {
         @content;
     }
 }
   
 @mixin desktop {
-    @media (min-width: #{$desktop}) {
+    @media (min-width: #{v.$desktop}) {
         @content;
     }
 }
-@mixin grid($columnas, $espaciado ) {
+
+@mixin container() {
+    width: 95%;
+    max-width: 120rem;
+    margin: 0 auto;
+}
+
+@mixin grid($columns:1, $gap:1rem ) {
     display: grid;
-    gap: $espaciado;
-    grid-template-columns: repeat($columnas, 1fr);
+    gap: $gap;
+    grid-template-columns: repeat($columns, 1fr);
+}
+
+@mixin reset-list() {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
