--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,25 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
 
 // Fuentes
-$fuente_principal: 'Lato', sans-serif;
+$main_font: 'Lato', sans-serif;
 
 // Tamaño de Media Queries
-$telefono: 480px;
+$mobile: 480px;
 $tablet: 768px;
 $desktop: 1024px;
 
 // Colores
-$negro: #000000;
-$amarillo: #E08709;;
-$verde: #71B100;
-$blanco: #FFFFFF;
-$gris: #e1e1e1;
-$grisOscuro: #333333;
+$black: #000000;
+$yellow: #E08709;
+$green: #71B100;
+$white: #FFFFFF;
+$gray: #e1e1e1;
+$darkGray: #333333;
 
-$separacion: 5rem;
+$gap: 5rem;
 
 // Fuentes
-$delgada: 300;
+$light: 300;
 $regular : 400;
 $bold: 700;
-$black: 900
+$w_black: 900;
