--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,24 +2,26 @@
 @use 'base/mixins' as m;
 
 header {
-    background-color: v.$darkGray;
-    background-image: url('/src/img/header.jpg');
-    background-size: cover;
-    background-position: 50%;
     padding: 2rem;
- 
-    .header-container{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        min-height: 70rem;
-    }
-    h1{
-        font-weight: v.$bold;
-        color: v.$white;
-        text-align: left;
-        max-width: 60rem;
-        line-height: 2;
+    background-color: v.$darkGray;
+    &.inicio{
+        background-color: v.$darkGray;
+        background-image: url('/src/img/header.jpg');
+        background-size: cover;
+        background-position: 50%;
+        .header-container{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            min-height: 70rem;
+        }
+        h1{
+            font-weight: v.$bold;
+            color: v.$white;
+            text-align: left;
+            max-width: 60rem;
+            line-height: 2;
+        }
     }
 }
 .navbar{
