Add: hover in header, buttons and footer

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -59,11 +59,16 @@ header {
             }
             &:last-child{
                 align-self: center;
+            }&:hover{
+                a{
+                    color: v.$green;
+                }
             }
         }
         & img{
             width: 2.5rem;
             height: 2.5rem;
         }
+        
     }
 }
