--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -20,11 +20,18 @@ footer{
             gap: 2rem;
             justify-content: center;
             align-items: center;
-            a{
-                color: v.$white;
-                font-size: 1.8rem;
+            li{
+                a{
+                    color: v.$white;
+                    font-size: 1.8rem;
+                }
+                &:hover{
+                    a{
+                        color: v.$green;
+                    }
+                }
             }
-        }        
+        }
     }
     p{
         color: v.$white;
