--- a/src/scss/layout/_blog.scss
+++ b/src/scss/layout/_blog.scss
@@ -19,7 +19,7 @@
     }
     .entry-info{
         h4,p{
-            color: v.$white;
+            color: v.$black;
         }
         h4{
             margin: 0;
@@ -48,6 +48,7 @@
     background: v.$green;
     border-radius: 2rem;
     font-size: 2.4rem;
+    color: v.$white;
     blockquote{
         position: relative;
         padding-left: 5rem;
