--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -19,7 +19,7 @@
                 margin: 0;
             }
             p{
-                color: v.$white;
+                color: v.$black;
             }
         }
     }
