add: contact dark mode

--- a/src/scss/base/_darkMode.scss
+++ b/src/scss/base/_darkMode.scss
@@ -41,4 +41,11 @@
             }
         }
     }
+    .contact-form{
+        .contact-form-section input, textarea, select{
+            background-color: v.$darkGray;
+            color: v.$white;
+            border: none;
+        }
+    }
 }
