--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -13,7 +13,9 @@ header {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            min-height: 70rem;
+            @include m.tablet{
+                min-height: 70rem;
+            }
         }
         h1{
             font-weight: v.$bold;
@@ -26,7 +28,9 @@ header {
 }
 .navbar{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
     @include m.tablet{
         flex-direction: row;
         justify-content: space-between;
@@ -47,9 +51,18 @@ header {
         }
     }
     &-links{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        gap: 1rem;
+        margin-top: 2rem;
+        @include m.tablet{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            width: auto;
+        }
         @include m.reset-list();
         li{
             margin: 0 1rem;
@@ -71,4 +84,11 @@ header {
         }
         
     }
+}
+
+.mobile-icon-menu{
+    @include m.tablet{
+        display: none;
+    }
+    width: 5rem;
 }
