add: progress with menu responsive

--- a/src/scss/base/_darkMode.scss
+++ b/src/scss/base/_darkMode.scss
@@ -41,6 +41,13 @@
             }
         }
     }
+    .blog-content{
+        .entry-info{
+            h4,p{
+                color: v.$white;
+            }
+        }
+    }
     .contact-form{
         .contact-form-section input, textarea, select{
             background-color: v.$darkGray;
