--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -51,16 +51,21 @@ header {
         }
     }
     &-links{
-        display: none;
+        
+        display: flex;
         flex-direction: column;
         align-items: center;
+        visibility: hidden;
+        opacity: 0;
+        transition: all 0.3s ease-in-out;
         width: 100%;
-        gap: 1rem;
         margin-top: 2rem;
         @include m.tablet{
             display: flex;
             flex-direction: row;
             justify-content: center;
+            visibility: visible;
+            opacity: 100;
             width: auto;
         }
         @include m.reset-list();
@@ -90,5 +95,10 @@ header {
     @include m.tablet{
         display: none;
     }
-    width: 5rem;
+    width: 3.5rem;
+}
+
+.show-menu{
+    visibility: visible;
+    opacity: 100;
 }
