add: adding darkmode complete and include php files

--- a/src/scss/base/_darkMode.scss
+++ b/src/scss/base/_darkMode.scss
@@ -19,6 +19,11 @@
     .ads{
         .ad-content{
             background-color: v.$darkGray;
+            .ad-info{
+                p.description{
+                    color: v.$white;
+                }
+            }
             .ad-description, p.ad-description{
                 color: v.$white;
             }
